--- a/scripts/install
+++ b/scripts/install
@@ -40,8 +40,8 @@ ynh_script_progression "Adding $app's configuration files..."
 
 ynh_config_add --template="conduwuit.toml" --destination="$install_dir/conduwuit.toml"
 
-chmod 400 "$install_dir/conduit.toml"
-chown $app:root "$install_dir/conduit.toml"
+chmod 400 "$install_dir/conduwuit.toml"
+chown $app:root "$install_dir/conduwuit.toml"
 
 #=================================================
 # START SYSTEMD SERVICE
