--- a/scripts/install
+++ b/scripts/install
@@ -51,7 +51,7 @@ chown $app:root "$install_dir/conduwuit.toml"
 #=================================================
 ynh_script_progression "Starting $app's systemd service..."
 
-ynh_systemctl --service="$app" --action="start"
+ynh_systemctl --service="$app" --action="start" --log_path=systemd
 
 #=================================================
 # END OF SCRIPT
